IBM/API4JSON#19